...
                                            <rect key="frame" x="20" y="3" width="94" height="29"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        </stepper>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="FZz-aA-RVy"/>
                                    <barButtonItem systemItem="play" id="gaR-2O-ffN"/>
                                    <barButtonItem systemItem="pause" id="6UG-sY-d2E"/>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="g0p-Mo-Sys"/>
                                    <barButtonItem systemItem="edit" id="mmd-u9-DmE"/>
                                    <barButtonItem width="20" style="plain" systemItem="fixedSpace" id="DxN-lE-gZc"/>
                                    <barButtonItem systemItem="action" id="Ivu-Ia-WY3"/>
                                </items>
                            </toolbar>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBx-Vr-5Ft">
                                <rect key="frame" x="550" y="99" width="46" height="387"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="46" id="Jp0-2d-YkV"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="addOrRemoveColumn:" destination="gOw-UR-gtn" eventType="touchUpInside" id="EUs-an-WNm"/>
                                </connections>
                            </button>
                            <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5bL-dV-xF3" userLabel="tracks">
                                <rect key="frame" x="4" y="521" width="592" height="35"/>
...
