...
//                if (httpResponse.statusCode == 200){
//                    let jsonResult: NSDictionary = try NSJSONSerialization.JSONObjectWithData(responseData!, options: NSJSONReadingOptions.MutableContainers) as! NSDictionary
//                    NSUserDefaults.standardUserDefaults().setObject(jsonResult["token"], forKey: "token")
                    performSegueWithIdentifier("toMenu", sender: nil)
//                }
//                else{
//                    let alertView = UIAlertView(title: "Erreur", message: "Connexion impossible, réessayez.", delegate: self, cancelButtonTitle: "Ok")
//                    alertView.alertViewStyle = .Default
//                    alertView.show()
//                }
//            }
//        }
//        catch (let err) {
...
